--- a/style.css
+++ b/style.css
@@ -2,21 +2,20 @@ body{
     margin: 0;
     padding: 0;
     background: url(background.jpg) no-repeat;
-    background-size: contain;
+    background-size: cover;
   }
   .box{
-    width: 450px;
+    width: 100%;
     background: rgba(0, 0, 0, 0.4);
-    padding: 40px;
     text-align: center;
-    margin: auto;
     margin-top: 5%;
     color: white;
     font-family: 'Century Gothic',sans-serif;
+    text-align: center;
   }
   .box-img{
     border-radius: 50%;
-    width: 200px;
+    width: 250px;
     height: 250px;
   }
   .box h1{
@@ -30,7 +29,7 @@ body{
     font-weight: 100;
   }
   .box p{
-    text-align: justify;
+
   }
   ul{
     margin: 0;
@@ -49,4 +48,8 @@ body{
   }
   .box li a:hover{
     color: #b9b9b9;
+  }
+
+  @media only screen and (max-width: 768px) {
+
   }
