--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body{
     background: url(background.jpg) no-repeat;
     background-size: cover;
     overflow: hidden;
+    width: 100%;
+    height: 100%;
   }
   .box{
     width: 100%;
