--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ body{
   @media only screen and (max-width: 768px) {
     body {
         width: 100%;
+        height: 100%;
         fit: all;
     }
   }
