--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@ body{
     margin: 0;
     padding: 0;
     background: url(background.jpg) no-repeat;
-    background-size: cover;
+	background-size: cover;
+	background-position:center;
+    position: absolute;
     overflow: hidden;
     width: 100%;
     height: 100%;
